how to make markdown proper, pls help

--- a/index.html
+++ b/index.html
@@ -48,9 +48,19 @@
 
         <!-- Additional nav links go here -->
         <span id="projects" class="nav-selected"> Projects. </span>
-        <span id="Links ">
+        <span id="Email">
+            <a href="https://mailto:i.arvindkrishna@gmail.com">
+              Email
+            </a>
+          </span>
+        <span id="Resume">
+            <a href="https://">
+              Resume
+            </a>
+          </span>
+        <span id="Contact Me">
             <a href="https://aroo.bio.link">
-              Links 
+              Contact Me
             </a>
           </span>
       </div>
@@ -102,8 +112,8 @@
             <svg class="pf-info-icon icon-f">
               <use xlink:href="assets/svg/svg-defs.svg#link"></use>
             </svg>
-            <a href="https://www.linkedin.com/in/aroo">
-              <span>www.linkedin.com/in/aroo</span>
+            <a href="https://arvindaroo.github.io">
+              <span>arvindaroo.github.io</span>
             </a>
           </div>
           <div>
@@ -561,6 +571,28 @@
                 <use xlink:href="assets/svg/svg-defs.svg#star"></use>
               </svg>
               <span>1</span>
+              <svg class="icon-fork">
+                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
+              </svg>
+              <span>0</span>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="repo-lang"><span>HTML</span></div>
+            <div class="repo-about">
+              <a href="https://github.com/ArvindAROO/ArvindAROO.github.io">
+                <span class="repo-title">
+                  ArvindAROO.github.io
+                </span>
+                <span class="repo-desc">
+                Personal Website</span>
+              </a>
+            </div>
+            <div class="repo-stats">
+              <svg class="icon-star">
+                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
+              </svg>
+              <span>0</span>
               <svg class="icon-fork">
                 <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
               </svg>
