so thats why i hate webdev

--- a/index.html
+++ b/index.html
@@ -131,46 +131,69 @@
       <div id="repo-block">
         <div id="readme">
           <h3><img src="https://raw.githubusercontent.com/iampavangandhi/iampavangandhi/master/gifs/Hi.gif" width="30px">Hey Guys I’m Arvind Krishna</h3>
-          <p>I am from Banglore, India and am currently doing B.Tech in Computer Science.</p>
-          <p>Mainly self-taught programmer with a huge passion for programming. Feel free to ping me about any of the below topics at any time.<br>
-            Learning new things is my fuel for life.<br>
-            <img align="right" src="https://user-images.githubusercontent.com/5713670/87202985-820dcb80-c2b6-11ea-9f56-7ec461c497c3.gif" width="200&quot;">
-          </p>
-          <h3>👨‍💻 Languages and Tools</h3>
-          <p><a href="https://github.com/ArvindAROO/ArvindAROO"><img src="https://img.shields.io/badge/-A8B9CC?style=flat&amp;logo=c&amp;logoColor=white&amp;link=https://github.com/ArvindAROO/ArvindAROO" alt="C"></a><br>
-            <a href="https://github.com/ArvindAROO/ArvindAROO"><img src="https://img.shields.io/badge/-Python-black?style=flat&amp;logo=python&amp;link=https://github.com/ArvindAROO/ArvindAROO" alt="Python"></a><br>
-            <a href="https://github.com/ArvindAROO/ArvindAROO"><img src="https://img.shields.io/badge/Java-orange?style=flat&amp;logo=java&amp;logoColor=white&amp;link=https://github.com/ArvindAROO/ArvindAROO" alt="Java"></a><br>
-            <a href="https://github.com/ArvindAROO/ArvindAROO"><img src="https://img.shields.io/badge/-Tensorflow-gray?style=flat&amp;logo=tensorflow&amp;link=https://github.com/ArvindAROO/ArvindAROO" alt="Tensorflow"></a><br>
-            <a href="https://github.com/ArvindAROO/ArvindAROO"><img src="https://img.shields.io/badge/-JavaScript-black?style=flat&amp;logo=javascript&amp;link=https://github.com/ArvindAROO/ArvindAROO" alt="JavaScript"></a><br>
-            <a href="https://github.com/ArvindAROO/ArvindAROO"><img src="https://img.shields.io/badge/-Nodejs-black?style=flat&amp;logo=Node.js&amp;link=https://github.com/ArvindAROO/ArvindAROO" alt="Nodejs"></a>
-          </p>
-          <p><a href="https://github.com/ArvindAROO/ArvindAROO"><img src="https://img.shields.io/badge/-MySQL-black?style=flat&amp;logo=mysql&amp;link=https://github.com/hritik5102" alt="MySQL"></a><br>
-            <a href="https://github.com/ArvindAROO/ArvindAROO"><img src="https://img.shields.io/badge/-Git-black?style=flat&amp;logo=git&amp;link=https://github.com/hritik5102" alt="Git"></a><br>
-            <a href="https://github.com/ArvindAROO/ArvindAROO"><img src="https://img.shields.io/badge/-GitHub-181717?style=flat&amp;logo=github&amp;link=https://github.com/hritik5102" alt="GitHub"></a>
-          </p>
-          <h2>A little bit more info</h2>
-          <ul>
-            <li>🔭 I’m currently working on #MYSELF</li>
-            <li>👯 I’m looking to collaborate on Literally anything</li>
-            <li>🤔 I’m looking for help with, hmm…, Project integrations, python, backend JS, competetive programming</li>
-            <li>💬 Ask me about: Literally anything (Not that I know about that, but I want to learn more about which I dont know)</li>
-            <li>📫 How to reach me: Drop a mail at <a href="mailto:arookrishna@protonmail.com">arookrishna@protonmail.com</a></li>
-            <li>😄 Pronouns: edit this section with whatever fits me and provide a PullRequest</li>
-            <li>⚡ Fun fact: Your free/paid certificates are worth shit in front of your knowledge</li>
-          </ul>
+          <img align="right" src="https://user-images.githubusercontent.com/5713670/87202985-820dcb80-c2b6-11ea-9f56-7ec461c497c3.gif" width="200" height="200">
+          I am from Banglore, India and am currently doing B.Tech in Computer Science.
+          <p>Mainly self-taught programmer with a huge passion for programming. Feel free to ping me about any of the below topics at any time.</p>
+          <p>The only golden rule I follow is: <strong>“Backend is always better than frontend”</strong></p>
+          <p align="left">📚 B.Tech in Computer Science and Engineering ( from PES University, Bengaluru, India </p>
+          <p align="left">📈 Backend Development, API's and Web-Scraping</p>
+          <p><br><br></p>
+          <h2>👨‍💻 Languages</h2>
+          <div align="center">
+            <img alt="" src="https://img.shields.io/badge/Python-FFD43B?style=for-the-badge&amp;logo=python">
+            <img alt="" src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&amp;logo=javascript&amp;logoColor=black">
+            <img alt="" src="https://img.shields.io/badge/-Nodejs-black?style=for-the-badge&amp;logo=Node.js&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&amp;logo=Java&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/C-00599C?style=for-the-badge&amp;logo=c&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&amp;logo=markdown&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Shell_Script-121011?style=for-the-badge&amp;logo=gnu-bash&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Markdown-000000?style=for-the-badge&amp;logo=markdown&amp;logoColor=white">
+          </div>
+          <h2>🧰 Libraries and Frameworks</h2>
+          <div align="center">
+            <img alt="" src="https://img.shields.io/badge/Numpy-777BB4?style=for-the-badge&amp;logo=numpy&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/pandas-%23150458.svg?style=for-the-badge&amp;logo=pandas&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Flask-000000?style=for-the-badge&amp;logo=flask&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Selenium-43B02A?style=for-the-badge&amp;logo=Selenium&amp;logoColor=white">
+            <br>
+            <img alt="" src="https://img.shields.io/badge/node.js-6DA55F?style=for-the-badge&amp;logo=node.js&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/express.js-%23404d59.svg?style=for-the-badge&amp;logo=express&amp;logoColor=%2361DAFB">
+          </div>
+          <h2>🔧 Tools</h2>
+          <div align="center">
+            <img alt="" src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&amp;logo=git&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&amp;logo=github&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Docker-2CA5E0?style=for-the-badge&amp;logo=docker&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/redis-%23DD0031.svg?&amp;style=for-the-badge&amp;logo=redis&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/conda-342B029.svg?&amp;style=for-the-badge&amp;logo=anaconda&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Jupyter-F37626.svg?&amp;style=for-the-badge&amp;logo=Jupyter&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Postman-FF6C37?style=for-the-badge&amp;logo=Postman&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Amazon_AWS-232F3E?style=for-the-badge&amp;logo=amazon-aws&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Heroku-430098?style=for-the-badge&amp;logo=heroku&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&amp;logo=postgresql&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/MongoDB-4EA94B?style=for-the-badge&amp;logo=mongodb&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Visual_Studio_Code-0078D4?style=for-the-badge&amp;logo=visual%20studio%20code&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/Colab-F9AB00?style=for-the-badge&amp;logo=googlecolab&amp;color=525252">
+            <img alt="" src="https://img.shields.io/badge/Notion-%23000000.svg?style=for-the-badge&amp;logo=notion&amp;logoColor=white
+">
+          </div>
           <h2>☕ Get In Touch</h2>
           <ul>
             <li>LinkedIn - <a href="https://www.linkedin.com/in/aroo">LinkedIn</a></li>
             <li>Mail - <a href="mailto:arookrishna@protonmail.com">arookrishna@protonmail.com</a></li>
-            <li>GitHub - <a href="https://github.com/ArvindAROO/">github</a></li>
-            <li>Website - Loading…</li>
+            <li>Website - <a href="https://arvindaroo.github.io/">ArvindAroo.github.io</a></li>
           </ul>
-          <h3>🏆 Github Status</h3>
-          <p align="left"> <a href="https://github.com/ryo-ma/github-profile-trophy"><img src="https://github-profile-trophy.vercel.app/?username=ArvindAroo&amp;theme=onedark" alt="Aroo"></a> </p>
-          <p><img src="https://github-readme-stats.vercel.app/api?username=ArvindAroo&amp;count_private=true&amp;show_icons=true&amp;theme=radical&amp;line_height=33" alt="My Github Status"></p>
-          <p><a href="https://github.com/DenverCoder1/github-readme-streak-stats"><img src="https://github-readme-stats.vercel.app/api/top-langs/?username=ArvindAROO&amp;layout=compact&amp;show_icons=true&amp;theme=tokyonight" alt="Top Languages"></a></p>
-          <p><a href="https://github.com/DenverCoder1/github-readme-streak-stats"><img src="https://github-readme-streak-stats.herokuapp.com/?user=ArvindAROO&amp;theme=tokyonight" alt="GitHub Streak"></a></p>
+          <h2>🏆 GitHub Stats</h2>
+          <img alt="" align="left" src="https://github-profile-trophy.vercel.app/?username=ArvindAroo&amp;theme=onedark">
+          <img alt="" align="left" src="https://github-readme-stats.vercel.app/api?username=ArvindAroo&amp;count_private=true&amp;show_icons=true&amp;theme=radical&amp;line_height=33">
+          <img alt="" align="left" src="https://github.com/DenverCoder1/github-readme-streak-stats">
+          <img alt="" align="left" src="https://github.com/DenverCoder1/github-readme-streak-stats">
           <img alt="Activity Graph" src="https://activity-graph.herokuapp.com/graph?username=ArvindAROO&amp;theme=github">
+          <div>
+            <img alt="" src="http://github-profile-summary-cards.vercel.app/api/cards/repos-per-language?username=ArvindAroo&amp;theme=github_dark">
+            <img alt="" src="http://github-profile-summary-cards.vercel.app/api/cards/most-commit-language?username=ArvindAroo&amp;theme=github_dark">
+            <img alt="" src="http://github-profile-summary-cards.vercel.app/api/cards/productive-time?username=ArvindAroo&amp;theme=github_dark&amp;utcOffset=6">
+          </div>
           <h3>Credits</h3>
           <ul>
             <li>Well, it’s a good thing to give credits to creators, almost all the content templates were ‘stolen’ (not really) from <a href="https://github.com/kautukkundan/Awesome-Profile-README-templates">https://github.com/kautukkundan/Awesome-Profile-README-templates</a> , a big THANK YOU!</li>
@@ -451,29 +474,6 @@
                 </span>
                 <span class="repo-desc">
                 All the code and files related to the MI-Lab of UE19CS305 course in sem 5</span>
-              </a>
-            </div>
-            <div class="repo-stats">
-              <svg class="icon-star">
-                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
-              </svg>
-              <span>1</span>
-              <svg class="icon-fork">
-                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
-              </svg>
-              <span>0</span>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="repo-lang"><span>Java</span></div>
-            <div class="repo-about">
-              <a href="https://github.com/ArvindAROO/Notifier">
-                <span class="repo-title">
-                  <svg class="icon-fork"><use xlink:href="assets/svg/svg-defs.svg#fork"></use></svg>
-                  Notifier
-                </span>
-                <span class="repo-desc">
-                App to notify you at the time you pick</span>
               </a>
             </div>
             <div class="repo-stats">
