--- a/index.html
+++ b/index.html
@@ -227,94 +227,6 @@
           <div class="grid-item">
             <div class="repo-lang"><span>Python</span></div>
             <div class="repo-about">
-              <a href="https://github.com/ArvindAROO/TheEnigma">
-                <span class="repo-title">
-                  TheEnigma
-                </span>
-                <span class="repo-desc">
-                The working software model of 'The Enigma'</span>
-              </a>
-            </div>
-            <div class="repo-stats">
-              <svg class="icon-star">
-                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
-              </svg>
-              <span>2</span>
-              <svg class="icon-fork">
-                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
-              </svg>
-              <span>0</span>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="repo-lang"><span>Python</span></div>
-            <div class="repo-about">
-              <a href="https://github.com/ArvindAROO/Snake-and-Ladder">
-                <span class="repo-title">
-                  Snake-and-Ladder
-                </span>
-                <span class="repo-desc">
-                A simple snake and ladder game using python</span>
-              </a>
-            </div>
-            <div class="repo-stats">
-              <svg class="icon-star">
-                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
-              </svg>
-              <span>3</span>
-              <svg class="icon-fork">
-                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
-              </svg>
-              <span>0</span>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="repo-lang"><span>C</span></div>
-            <div class="repo-about">
-              <a href="https://github.com/ArvindAROO/ActivationFunctions-in-C">
-                <span class="repo-title">
-                  ActivationFunctions-in-C
-                </span>
-                <span class="repo-desc">
-                A repository contains some of the activation functions used in ML implemented in C</span>
-              </a>
-            </div>
-            <div class="repo-stats">
-              <svg class="icon-star">
-                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
-              </svg>
-              <span>1</span>
-              <svg class="icon-fork">
-                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
-              </svg>
-              <span>0</span>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="repo-lang"><span>Python</span></div>
-            <div class="repo-about">
-              <a href="https://github.com/ArvindAROO/GUI-based-age-calculator-using-Python">
-                <span class="repo-title">
-                  GUI-based-age-calculator-using-Python
-                </span>
-                <span class="repo-desc">
-                A simple GUI(Tkinter) based age calculator using python</span>
-              </a>
-            </div>
-            <div class="repo-stats">
-              <svg class="icon-star">
-                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
-              </svg>
-              <span>1</span>
-              <svg class="icon-fork">
-                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
-              </svg>
-              <span>0</span>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="repo-lang"><span>Python</span></div>
-            <div class="repo-about">
               <a href="https://github.com/ArvindAROO/J.A.R.V.I.S">
                 <span class="repo-title">
                   J.A.R.V.I.S
@@ -401,6 +313,28 @@
             </div>
           </div>
           <div class="grid-item">
+            <div class="repo-lang"><span>Python</span></div>
+            <div class="repo-about">
+              <a href="https://github.com/SammithSB/CaaS">
+                <span class="repo-title">
+                  CaaS
+                </span>
+                <span class="repo-desc">
+                </span>
+              </a>
+            </div>
+            <div class="repo-stats">
+              <svg class="icon-star">
+                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
+              </svg>
+              <span>2</span>
+              <svg class="icon-fork">
+                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
+              </svg>
+              <span>3</span>
+            </div>
+          </div>
+          <div class="grid-item">
             <div class="repo-about">
               <a href="https://github.com/ArvindAROO/UE19CS344-DBT-Labs">
                 <span class="repo-title">
@@ -452,6 +386,28 @@
                 </span>
                 <span class="repo-desc">
                 </span>
+              </a>
+            </div>
+            <div class="repo-stats">
+              <svg class="icon-star">
+                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
+              </svg>
+              <span>3</span>
+              <svg class="icon-fork">
+                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
+              </svg>
+              <span>0</span>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="repo-lang"><span>Python</span></div>
+            <div class="repo-about">
+              <a href="https://github.com/ArvindAROO/Snake-and-Ladder">
+                <span class="repo-title">
+                  Snake-and-Ladder
+                </span>
+                <span class="repo-desc">
+                A simple snake and ladder game using python</span>
               </a>
             </div>
             <div class="repo-stats">
@@ -525,6 +481,50 @@
                 <use xlink:href="assets/svg/svg-defs.svg#star"></use>
               </svg>
               <span>2</span>
+              <svg class="icon-fork">
+                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
+              </svg>
+              <span>0</span>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="repo-lang"><span>Python</span></div>
+            <div class="repo-about">
+              <a href="https://github.com/ArvindAROO/TheEnigma">
+                <span class="repo-title">
+                  TheEnigma
+                </span>
+                <span class="repo-desc">
+                The working software model of 'The Enigma'</span>
+              </a>
+            </div>
+            <div class="repo-stats">
+              <svg class="icon-star">
+                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
+              </svg>
+              <span>2</span>
+              <svg class="icon-fork">
+                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
+              </svg>
+              <span>0</span>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="repo-lang"><span>Python</span></div>
+            <div class="repo-about">
+              <a href="https://github.com/ArvindAROO/Fast-API-hotel">
+                <span class="repo-title">
+                  Fast-API-hotel
+                </span>
+                <span class="repo-desc">
+                REST API for Hotel data using FastAPI</span>
+              </a>
+            </div>
+            <div class="repo-stats">
+              <svg class="icon-star">
+                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
+              </svg>
+              <span>1</span>
               <svg class="icon-fork">
                 <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
               </svg>
@@ -845,6 +845,28 @@
             </div>
           </div>
           <div class="grid-item">
+            <div class="repo-lang"><span>C</span></div>
+            <div class="repo-about">
+              <a href="https://github.com/ArvindAROO/ActivationFunctions-in-C">
+                <span class="repo-title">
+                  ActivationFunctions-in-C
+                </span>
+                <span class="repo-desc">
+                A repository contains some of the activation functions used in ML implemented in C</span>
+              </a>
+            </div>
+            <div class="repo-stats">
+              <svg class="icon-star">
+                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
+              </svg>
+              <span>1</span>
+              <svg class="icon-fork">
+                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
+              </svg>
+              <span>0</span>
+            </div>
+          </div>
+          <div class="grid-item">
             <div class="repo-lang"><span>Python</span></div>
             <div class="repo-about">
               <a href="https://github.com/ArvindAROO/awesome-python">
@@ -854,6 +876,28 @@
                 </span>
                 <span class="repo-desc">
                 A curated list of awesome Python frameworks, libraries, software and resources</span>
+              </a>
+            </div>
+            <div class="repo-stats">
+              <svg class="icon-star">
+                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
+              </svg>
+              <span>1</span>
+              <svg class="icon-fork">
+                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
+              </svg>
+              <span>0</span>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="repo-lang"><span>Python</span></div>
+            <div class="repo-about">
+              <a href="https://github.com/ArvindAROO/GUI-based-age-calculator-using-Python">
+                <span class="repo-title">
+                  GUI-based-age-calculator-using-Python
+                </span>
+                <span class="repo-desc">
+                A simple GUI(Tkinter) based age calculator using python</span>
               </a>
             </div>
             <div class="repo-stats">
