--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </a>
           </span>
         <span id="Resume">
-            <a href="https://">
+            <a href="https://drive.google.com/drive/folders/1KY1EbUGB-ogi277mwEpZAeH_qVNhzWwB?usp=sharing">
               Resume
             </a>
           </span>
@@ -137,6 +137,7 @@
           <p>The only golden rule I follow is: <strong>“Backend is always better than frontend”</strong></p>
           <p align="left">📚 B.Tech in Computer Science and Engineering ( from PES University, Bengaluru, India </p>
           <p align="left">📈 Backend Development, API's and Web-Scraping</p>
+          <p><a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2FArvindAroo&amp;count_bg=%2379C83D&amp;title_bg=%23555555&amp;icon=&amp;icon_color=%23E7E7E7&amp;title=views&amp;edge_flat=false"></a></p>
           <p><br><br></p>
           <h2>👨‍💻 Languages</h2>
           <div align="center">
@@ -154,6 +155,7 @@
             <img alt="" src="https://img.shields.io/badge/Numpy-777BB4?style=for-the-badge&amp;logo=numpy&amp;logoColor=white">
             <img alt="" src="https://img.shields.io/badge/pandas-%23150458.svg?style=for-the-badge&amp;logo=pandas&amp;logoColor=white">
             <img alt="" src="https://img.shields.io/badge/Flask-000000?style=for-the-badge&amp;logo=flask&amp;logoColor=white">
+            <img alt="" src="https://img.shields.io/badge/fastAPI-000000?style=for-the-badge&amp;logo=fastAPI&amp;logoColor=white">
             <img alt="" src="https://img.shields.io/badge/Selenium-43B02A?style=for-the-badge&amp;logo=Selenium&amp;logoColor=white">
             <br>
             <img alt="" src="https://img.shields.io/badge/node.js-6DA55F?style=for-the-badge&amp;logo=node.js&amp;logoColor=white">
