--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
         <div id="readme">
           <h3><img src="https://raw.githubusercontent.com/iampavangandhi/iampavangandhi/master/gifs/Hi.gif" width="30px">Hey Guys I’m Arvind Krishna</h3>
           <img align="right" src="https://user-images.githubusercontent.com/5713670/87202985-820dcb80-c2b6-11ea-9f56-7ec461c497c3.gif" width="200" height="200">
-          I am from Banglore, India and am currently doing B.Tech in Computer Science.
-          <p>Mainly self-taught programmer with a huge passion for programming. Feel free to ping me about any of the below topics at any time.</p>
+          I am from Bangalore, India and am currently doing B.Tech in Computer Science.
+          <p>Mainly self-taught programmer with a huge passion for programming.</p>
           <p>The only golden rule I follow is: <strong>“Backend is always better than frontend”</strong></p>
-          <p align="left">📚 B.Tech in Computer Science and Engineering ( from PES University, Bengaluru, India </p>
+          <p align="left">📚 B.Tech in Computer Science and Engineering ( from PES University, Bangalore, India </p>
           <p align="left">📈 Backend Development, API's and Web-Scraping</p>
           <p><a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2FArvindAroo&amp;count_bg=%2379C83D&amp;title_bg=%23555555&amp;icon=&amp;icon_color=%23E7E7E7&amp;title=views&amp;edge_flat=false"></a></p>
           <p><br><br></p>
@@ -176,9 +176,21 @@
             <img alt="" src="https://img.shields.io/badge/MongoDB-4EA94B?style=for-the-badge&amp;logo=mongodb&amp;logoColor=white">
             <img alt="" src="https://img.shields.io/badge/Visual_Studio_Code-0078D4?style=for-the-badge&amp;logo=visual%20studio%20code&amp;logoColor=white">
             <img alt="" src="https://img.shields.io/badge/Colab-F9AB00?style=for-the-badge&amp;logo=googlecolab&amp;color=525252">
-            <img alt="" src="https://img.shields.io/badge/Notion-%23000000.svg?style=for-the-badge&amp;logo=notion&amp;logoColor=white
-">
+            <img alt="" src="https://img.shields.io/badge/Notion-%23000000.svg?style=for-the-badge&amp;logo=notion&amp;logoColor=white">
           </div>
+          <h2>🎨 Hobbies &amp; Interests</h2>
+          <p>Not to show I am a good developer, but to show I have a life outside VSCode and Jupyter Notebooks.</p>
+          <ul>
+            <li><strong>Blogging</strong> - I write blogs about various meaningless things that I do. You can find my blogs <a href="https://aroowrites.medium.com/">here</a>.</li>
+            <li>Heavily into <strong>EDM</strong> and anything that has to do with <strong>music</strong>.</li>
+            <li>Interested in reading anything that has to do with <strong>philosophy</strong>, <strong>psychology</strong> and <strong>human behaviour</strong>.</li>
+            <li>Spend a lot of time shitting on <strong>education system</strong>.</li>
+          </ul>
+          <h2>👨‍🏭 Work Experience</h2>
+          <ul>
+            <li><strong>Backend Developer Intern</strong> at <a href="https://teaminup.io/"><strong>TeaminUp</strong></a> - <em>April 2022 - August 2022</em></li>
+            <li><strong>Part Time Backend Developer</strong> at <a href="https://eoraa.com/"><strong>Eoraa &amp; Co.</strong></a> - <em>August 2022 - Present</em></li>
+          </ul>
           <h2>☕ Get In Touch</h2>
           <ul>
             <li>LinkedIn - <a href="https://www.linkedin.com/in/aroo">LinkedIn</a></li>
@@ -402,6 +414,28 @@
             </div>
           </div>
           <div class="grid-item">
+            <div class="repo-lang"><span>C</span></div>
+            <div class="repo-about">
+              <a href="https://github.com/ArvindAROO/DAA_Assignments_UE19CS251">
+                <span class="repo-title">
+                  DAA_Assignments_UE19CS251
+                </span>
+                <span class="repo-desc">
+                A repository containing the source codes for the assignments done as a part of the Design And Analysis Of Algorithms (UE19CS251) at PES University.</span>
+              </a>
+            </div>
+            <div class="repo-stats">
+              <svg class="icon-star">
+                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
+              </svg>
+              <span>3</span>
+              <svg class="icon-fork">
+                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
+              </svg>
+              <span>0</span>
+            </div>
+          </div>
+          <div class="grid-item">
             <div class="repo-lang"><span>Python</span></div>
             <div class="repo-about">
               <a href="https://github.com/ArvindAROO/Snake-and-Ladder">
@@ -417,6 +451,28 @@
                 <use xlink:href="assets/svg/svg-defs.svg#star"></use>
               </svg>
               <span>3</span>
+              <svg class="icon-fork">
+                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
+              </svg>
+              <span>0</span>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="repo-lang"><span>Python</span></div>
+            <div class="repo-about">
+              <a href="https://github.com/ArvindAROO/LeetsGo">
+                <span class="repo-title">
+                  LeetsGo
+                </span>
+                <span class="repo-desc">
+                Collection of LeetCode questions to ace the coding interview! - Created using [LeetHub](https://github.com/QasimWani/LeetHub)</span>
+              </a>
+            </div>
+            <div class="repo-stats">
+              <svg class="icon-star">
+                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
+              </svg>
+              <span>2</span>
               <svg class="icon-fork">
                 <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
               </svg>
@@ -468,14 +524,14 @@
             </div>
           </div>
           <div class="grid-item">
-            <div class="repo-lang"><span>C</span></div>
+            <div class="repo-lang"><span>HTML</span></div>
             <div class="repo-about">
-              <a href="https://github.com/ArvindAROO/DAA_Assignments_UE19CS251">
+              <a href="https://github.com/ArvindAROO/webtech-project-CS204">
                 <span class="repo-title">
-                  DAA_Assignments_UE19CS251
+                  webtech-project-CS204
                 </span>
                 <span class="repo-desc">
-                A repository containing the source codes for the assignments done as a part of the Design And Analysis Of Algorithms (UE19CS251) at PES University.</span>
+                The official repo for CS204 webtech project</span>
               </a>
             </div>
             <div class="repo-stats">
@@ -486,7 +542,7 @@
               <svg class="icon-fork">
                 <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
               </svg>
-              <span>0</span>
+              <span>1</span>
             </div>
           </div>
           <div class="grid-item">
@@ -711,28 +767,6 @@
                 <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
               </svg>
               <span>0</span>
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="repo-lang"><span>HTML</span></div>
-            <div class="repo-about">
-              <a href="https://github.com/ArvindAROO/webtech-project-CS204">
-                <span class="repo-title">
-                  webtech-project-CS204
-                </span>
-                <span class="repo-desc">
-                The official repo for CS204 webtech project</span>
-              </a>
-            </div>
-            <div class="repo-stats">
-              <svg class="icon-star">
-                <use xlink:href="assets/svg/svg-defs.svg#star"></use>
-              </svg>
-              <span>1</span>
-              <svg class="icon-fork">
-                <use xlink:href="assets/svg/svg-defs.svg#fork"></use>
-              </svg>
-              <span>1</span>
             </div>
           </div>
           <div class="grid-item">
